# atfft

./: CMakeLists.txt  COPYING  README  README.md  index.html  notes
benchmarks/: .gitignore  Makefile  benchmark.cpp  benchmark.html
doc/: Doxyfile  atfft.dox  atfft.md  equations.dox  implementations.dox
doc/html/: Equations.html  annotated.html  atfft_8h.html  atfft_8h_source.html  atfft__dct_8h.html  atfft__dct_8h_source.html  atfft__dft_8h.html  atfft__dft_8h_source.html  atfft__dft__nd_8h.html  atfft__dft__nd_8h_source.html  atfft__dft__nd__util_8h.html  atfft__dft__nd__util_8h_source.html  atfft__dft__util_8h.html  atfft__dft__util_8h_source.html  atfft__shared_8h.html  atfft__shared_8h_source.html  atfft__windows_8h.html  atfft__windows_8h_source.html  classes.html  dir_5b0fdf16be1ce6ca3f67e7b728976180.html  dir_d44c64559bbebec7f509842c48db8b23.html  equations.html  files.html  formula.repository  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__typedefs.html  index.html  md_equations.html  md_intro.html  md_test.html  modules.html  pages.html  structatfft__dft.html
doc/html/search/: all_0.js  all_2.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  pages_0.js  pages_1.js  search.js  searchdata.js  typedefs_0.js
doc/sample_code/: complex_dft.c  real_dft.c
examples/: .gitignore  Makefile  complex_transform.c  dct.c  nd_complex.c  nd_real.c  print_plan.c  real_transform.c
include/: atfft.h
include/atfft/: atfft.h  atfft_dct.h  atfft_dft.h  atfft_dft_nd.h  atfft_dft_util.h  atfft_shared.h  atfft_windows.h  dct.h  dct_util.h  dft.h  dft_nd.h  dft_nd_util.h  dft_util.h  types.h  windows.h
src/: atfft_dct.c  atfft_dct_ffmpeg.c  atfft_dct_fftw.c  atfft_dct_ooura.c  atfft_dct_vdsp.c  atfft_dft_ffts.c  atfft_dft_gsl.c  atfft_dft_kiss.c  atfft_dft_ooura.c  atfft_dft_pffft.c  atfft_dft_vdsp.c  atfft_ffmpeg.c  atfft_ffts.c  atfft_fftw.c  atfft_gsl.c  atfft_internal.h  atfft_kiss.c  atfft_ooura.c  atfft_shared.c  atfft_vdsp.c
src/atfft/: atfft_dct.c  atfft_dft.c  atfft_dft_bluestein.c  atfft_dft_bluestein.h  atfft_dft_cooley_tukey.c  atfft_dft_cooley_tukey.h  atfft_dft_nd.c  atfft_dft_rader.c  atfft_dft_rader.h  atfft_internal.c  atfft_internal.h  atfft_shared.c  constants.h  dct.c  dct_util.c  dft.c  dft_bluestein.c  dft_bluestein.h  dft_cooley_tukey.c  dft_cooley_tukey.h  dft_nd.c  dft_nd_util.c  dft_pfa.c  dft_pfa.h  dft_plan.c  dft_plan.h  dft_rader.c  dft_rader.h  dft_util.c  print_plans.c  print_plans.h  test_fft.m  types.c
src/atfft/windows/: atfft_windows.c  windows.c
src/dct/: atfft_dct.c  atfft_dct_ffmpeg.c  atfft_dct_fftw.c  atfft_dct_ooura.c  atfft_dct_vdsp.c
src/dft/: atfft_dft.c  atfft_dft_bluestein.c  atfft_dft_ffmpeg.c  atfft_dft_ffts.c  atfft_dft_fftw.c  atfft_dft_gsl.c  atfft_dft_ooura.c  atfft_dft_pffft.c  atfft_dft_rader.c  atfft_dft_rader.h  atfft_dft_vdsp.c
src/ffmpeg/: atfft_dct_ffmpeg.c  atfft_dft_ffmpeg.c  dct.c  dft.c
src/ffts/: dft.c  dft_nd.c
src/fftw/: atfft_dct_fftw.c  atfft_dft_fftw.c  atfft_dft_nd_fftw.c  atfft_fftw_internal.h  dct.c  dft.c  dft_nd.c  fftw_definitions.h
src/gsl/: atfft_dft_gsl.c  dft.c
src/ipp/: dct.c  dft.c  ipp_definitions.c  ipp_definitions.h
src/kfr/: dct.c  dft.c  kfr_definitions.h
src/kiss/: atfft_dft_kiss.c  dft.c  dft_nd.c
src/mkl/: dft.c  dft_nd.c  mkl_definitions.h
src/ooura/: atfft_dft_ooura.c  dct.c  dft.c  ooura.h
src/pffft/: atfft_dft_pffft.c  dft.c
src/vdsp/: atfft_dft_vdsp.c  dct.c  dft.c
src/windows/: atfft_windows.c
tests/: .gitignore  CMakeLists.txt  Makefile  complex_dft.c  complex_transform.c  real_transform.c  test_dft.c  test_functions.c  test_functions.h
